@@ -1569,11 +1569,11 @@ wShowLegalPanel(WScreen *scr)
       _("    Window Maker is free software; you can redistribute it and/or\n"
 	"modify it under the terms of the GNU General Public License as\n"
 	"published by the Free Software Foundation; either version 2 of the\n"
-	"License, or (at your option) any later version.\n\n\n"
+	"License, or (at your option) any later version.\n\n"
 	"    Window Maker is distributed in the hope that it will be useful,\n"
 	"but WITHOUT ANY WARRANTY; without even the implied warranty\n"
 	"of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n"
-	"See the GNU General Public License for more details.\n\n\n"
+	"See the GNU General Public License for more details.\n\n"
 	"    You should have received a copy of the GNU General Public\n"
 	"License along with this program; if not, write to the Free Software\n"
 	"Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA\n"
