@@ -12,6 +12,7 @@ Changes since version 0.80.0:
 - Fixed text in info panel for multibyte (Seiichi SATO <ssato@sh.rim.or.jp>)
 - Separated the font caches for normal fonts and fontsets in WINGs (they can
   have the same names and collide in the cache giving unwanted results)
+- Fixed Legal Panel not to display rectangles in place of new lines.
 
 
 Changes since version 0.70.0:
